--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -249,10 +249,9 @@ button {
     }
   }
   table {
+    border-radius: 15px 15px;
     border-collapse: collapse;
     text-align: center;
-    border-radius: 15px 15px;
-    box-shadow: 0 2px 15px -6px rgb(0 0 0 / 50%);
     background-color: white;
 
     .tableHeader {
